# AlphaRing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  README.md
directx11_hook/: CMakeLists.txt
directx11_hook/doc/: method_table.txt
directx11_hook/include/: directx11_hook.h  hook.h
directx11_hook/src/: detour_function.h  function_table.cpp  function_table.h  hook.cpp  hook.h  imgui_impl.cpp  imgui_impl.h  window.cpp  window.h
dll_wrapper/: CMakeLists.txt  module_definition.cpp  module_definition.h  wrapper.cpp
lib/game/: CMakeLists.txt
lib/game/inc/: groundhog.h  halo1.h  halo2.h  halo3.h  halo3odst.h  halo4.h  haloreach.h
lib/game/inc/1.3385.0.0/: offset_groundhog.h  offset_halo1.h  offset_halo2.h  offset_halo3.h  offset_halo3odst.h  offset_halo4.h  offset_haloreach.h  offset_mcc.h
lib/game/src/: ICNative.h
lib/game/src/groundhog/: base.h  native_groundhog.cpp  native_groundhog.h
lib/game/src/halo1/: native_halo1.cpp  native_halo1.h
lib/game/src/halo3/: native_halo3.cpp  native_halo3.h
lib/game/src/halo3odst/: base.h  native_halo3odst.cpp  native_halo3odst.h
lib/game/src/halo4/: base.h  native_halo4.cpp  native_halo4.h
lib/game/src/haloreach/: base.h  native_haloreach.cpp  native_haloreach.h
lib_halo3/: CMakeLists.txt
lib_halo3/include/: lib_halo3.h
lib_halo3/src/base/: enum.h  type.h
lib_halo3/src/console/: Arg.cpp  Arg.h  Console.h  Function.cpp  Function.h  Functions.cpp  Functions.h
lib_halo3/src/entity/: EntityManager.cpp  EntityManager.h  entity_manager.cpp  entity_manager.h
lib_halo3/src/native/: native.cpp  native.h
lib_halo3/src/objects/: object_info.cpp  object_info.h  object_manager.cpp  object_manager.h  objects.cpp  objects.h
lib_halo3/src/os/: FileVersion.h
lib_halo3/src/physics/: physics_constant.cpp  physics_constant.h
lib_halo3/src/xml/: Module.cpp  Module.h
mcc_hook/: CMakeLists.txt
mcc_hook/include/: mcc_hook.h
mcc_hook/src/: mcc.cpp  mcc.h
mcc_hook/src/asm/: asm.h  asm_hook_mcc_load.asm  asm_hook_mcc_load.h  asm_hook_mcc_unload_entry.asm  asm_hook_mcc_unload_entry.h  asm_mcc_hook_load.h  asm_mcc_hook_unload.asm  asm_mcc_hook_unload.h
ring_core/: CMakeLists.txt  main.cpp
ring_core/doc/: data.xml
ring_core/res/: data.xml
ring_core/src/cheats/: Cheats.cpp  Cheats.h
ring_core/src/console/: Arg.cpp  Console.cpp  Console.h  Functions.cpp  Functions.h
ring_core/src/h3/: H3.cpp  H3.h
ring_core/src/hook/: Entry.cpp  Entry.h  Hook.cpp  Hook.h
ring_core/src/hook/asm/: asm.h  asm_hook_script.asm  this_thread_get_teb.asm
ring_core/src/interface/: Interface.cpp  Interface.h
ring_core/src/os/: FileVersion.cpp  FileVersion.h
ring_core/src/system/: Base.h  Log.cpp  Log.h  Main.cpp
ring_core/src/xml/: Module.cpp  Module.h
src/: CMakeLists.txt  common.h  main.cpp
src/Input/: Input.cpp  Input.h
src/core/: ExternalConsole.cpp  ExternalConsole.h  FileVersion.cpp  FileVersion.h  ISystem.h  LockedResource.cpp  LockedResource.h  Log.cpp  Log.h  Main.cpp  Renderer.h  String.cpp  String.h  System.h  ThreadLocalStorage.h  Window.cpp  Window.h
src/filesystem/: Filesystem.cpp  Filesystem.h
src/game/: ICNative.h
src/game/groundhog/: base.h  native.cpp  native.h  native_groundhog.cpp
src/game/groundhog/entry/: engine.cpp  render.cpp  world.cpp
src/game/groundhog/game/: players.h
src/game/groundhog/native/: native.cpp  native.h
src/game/halo1/: native_halo1.cpp  native_halo1.h
src/game/halo1/native/: base.h  native.cpp  native.h
src/game/halo2/game/: players.h
src/game/halo2/native/: native.cpp  native.h
src/game/halo3/: halo3.h  native_halo3.cpp  native_halo3.h
src/game/halo3/ai/: actors.cpp  actors.h
src/game/halo3/base/: base.h  enum.h  math.h  type.h
src/game/halo3/camera/: camera.cpp  camera.h  eCameraMode.h
src/game/halo3odst/: base.h  native.cpp  native.h  native_halo3odst.cpp
src/game/halo4/: native.cpp  native.h  native_halo4.cpp
src/game/haloreach/: native.cpp  native.h  native_haloreach.cpp  native_haloreach.h
src/global/: Global.cpp  Global.h
src/hook/: Hook.cpp  Hook.h  d3d11.cpp  d3d11.h  mcc.cpp
src/hook/d3d11/: CMakeLists.txt  d3d11.cpp  d3d11.h  detour_function.cpp  function_table.cpp  function_table.h  hook.cpp  imgui_impl.cpp  imgui_impl.h  main_renderer.cpp  main_renderer.h  main_window.cpp  main_window.h
src/hook/halo3/: CMakeLists.txt  halo3.cpp  halo3.h
src/hook/mcc/: mcc.cpp  mcc.h  module.h
src/imgui/: basic_widget.h  curve.h  curve_editor.cpp  curve_editor.h  home_page.cpp  home_page.h  keyframe.h  main_context.cpp  main_context.h
src/imgui/curve_editor/: basic_widget.h  keyframe.h
src/input/: Input.cpp  Input.h
src/log/: Log.cpp  Log.h
src/mcc/: CDeviceManager.h  CGameEngine.cpp  CGameEngine.h  CGameGlobal.cpp  CGameGlobal.h  CGameManager.cpp  CGameManager.h  CGameManagerSplitscreen.cpp  CGamepadMapping.cpp  CGamepadMapping.h  CInputDevice.h  CUserProfile.cpp  CUserProfile.h  Cell.h  mcc.cpp  mcc.h
src/mcc/module/: CGameEngine.cpp  CGameEngine.h  CModule.cpp  CModule.h  Module.cpp  Module.h
src/mcc/network/: Network.cpp  Network.h
src/mcc/splitscreen/: CDeviceManager.cpp  CDeviceManager.h  CGameManager.cpp  CGameManager.h  Splitscreen.cpp  Splitscreen.h  settings.cpp  settings.h
src/module/: Module.cpp  Module.h  entry.cpp  entry.h
src/module/halo3/: draw.cpp  engine.cpp  entry.cpp  entry.h  map.cpp  render.cpp  world.cpp
src/os/: FileVersion.cpp  FileVersion.h  ThreadLocalStorage.cpp  ThreadLocalStorage.h
src/patch/: Patch.cpp  Patch.h
src/render/: Render.cpp  Render.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/render/d3d11/: D3d11.cpp  D3d11.h  Graphics.cpp  Graphics.h  Hook.cpp
src/render/imgui/: ICContext.h  ImGui.cpp  ImGui.h
src/render/window/: Window.cpp  Window.h
src/script/: Arg.cpp  Arg.h  Cheats.cpp  Function.h
src/string/: String.cpp  String.h
src/ui/: Context.cpp  Context.h  Interface.cpp  Interface.h
src/ui/pages/: page_halo3.cpp  page_halo3.h  page_mcc.cpp  page_mcc.h
src/wrapper/: module_definition.cpp  module_definition.h  wrapper.cpp
src/xml/: Module.h
(+394 files in other folders)
